tests/a/tests/integrity/fail/if/if.4.stderr
error: expected {root}{root}, found {root}{b,c,root}
  --> tests/integrity/fail/if/if.4.rs:12:17
   |
12 |             x = 6;
   |                 ^
